# firework-rs

./: Cargo.toml  README.md  index.js  package.json
src/: main.rs
