[package]
name = "fireworkrs"
version = "0.2.1"
edition = "2021"
authors = ["Matteo Bigoi <bigo@crisidev.org>"]
homepage = "https://github.com/crisidev/fireworkrs"
repository = "https://github.com/crisidev/fireworkrs"
description = "Play text art animations in your terminal! This package includes several pre-made animations like fireworks and a cozy fireplace that are embedded in the binary."
license-file = "LICENSE"
readme = "README.md"
keywords = ["terminal", "fireworks", "cli", "ascii"]
categories = ["command-line-utilities"]

[dependencies]
include_dir = "0.7"
